Removed rclone since not ending up using a cloud directly for now + set permissions on downloaded file

--- a/apps/secrets.example.yaml
+++ b/apps/secrets.example.yaml
@@ -1,4 +1,4 @@
-  output: "./"
-  host: "127.0.0.1"
-  rclone_remote: "remotename:remotefolder"
-  password_cloud: ""
+output: "/location/to/file/"
+destination: "/location/to/folder/"
+host: "127.0.0.1"
+password_cloud: ""
