--- a/apps/apps.yaml
+++ b/apps/apps.yaml
@@ -2,6 +2,6 @@ upload_tapo_detection:
   module: upload_tapo_detection
   class: UploadTapoDetection
   output: !secret output
+  destination: !secret destination
   host: !secret host
-  rclone_remote: !secret rclone_remote
   password_cloud: !secret password_cloud
