--- a/apps/secrets.example.yaml
+++ b/apps/secrets.example.yaml
@@ -2,3 +2,4 @@ output: "/location/to/file/"
 destination: "/location/to/folder/"
 host: "127.0.0.1"
 password_cloud: ""
+entity_id: "sensor.detector"
