--- a/apps/secrets.example.yaml
+++ b/apps/secrets.example.yaml
@@ -3,3 +3,4 @@ destination: "/location/to/folder/"
 host: "127.0.0.1"
 password_cloud: ""
 entity_id: "sensor.detector"
+rtsp_stream: "rtsp://192.168.0.0:554/live"
