opencv doesn't seem to work how i'd like

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,11 @@
 # having trouble with py 3.12, this should work
 # pip install git+https://github.com/AppDaemon/appdaemon.git
 #pip install appdaemon
+hassapi==0.2.1
 #pytapo
 pytapo==3.3.38
 #python3 -m pip install opencv-python
-#opencv-python==4.11.0.86
-opencv-python-headless==4.11.0.86
+numpy<2
+opencv-python==4.11.0.86
+#opencv-python-headless==4.11.0.86
+aiofiles==24.1.0
