update the readme and secrets example

--- a/apps/secrets.example.yaml
+++ b/apps/secrets.example.yaml
@@ -1,5 +1,5 @@
-output: "/location/to/file/"
-destination: "/location/to/folder/"
+output: "/location/to/downloadfolder/"
+destination: "/location/to/folder/destination/"
 host: "127.0.0.1"
 password_cloud: ""
 entity_id: "sensor.detector"
